# agentaudit

./: .gitignore  CITATION.cff  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
agentaudit/: __init__.py  audit.py  cli.py  detectors.py  gates.py  judge.py  report.py  trace.py
agentaudit/adapters/: __init__.py  crewai.py  langgraph.py
examples/: context_dropped_trace.json  demo_report.md  demo_trace.json  instruction_ignored_trace.json  tool_misread_trace.json
scripts/: make_demo_gif.py
tests/: test_adapters.py  test_agentaudit.py  test_anthropic_judge.py  test_stage3.py
tests/fixtures/: crewai_run.json  langgraph_run.json
