[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentaudit"
version = "0.2.0"
description = "Evaluation framework for multi-agent AI workflows: handoff quality scoring, failure attribution, loop detection, and cost guardrails."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vineetha Vallish Kumar" }]
keywords = ["llm", "agents", "multi-agent", "evaluation", "observability", "langgraph", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://github.com/vineetha00/agentaudit"
Repository = "https://github.com/vineetha00/agentaudit"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agentaudit = "agentaudit.cli:main"

[tool.setuptools.packages.find]
include = ["agentaudit*"]
